crates/math-core/src/snapshots/math_core__token_queue__tests__consecutive_whitespace.snap
---
source: crates/math-core/src/token_queue.rs
expression: "{x   y} z"
---
1..2: Letter("x", MathOrText)
2..3: Whitespace
5..6: Letter("y", MathOrText)
