crates/math-core/src/snapshots/math_core__token_queue__tests__consecutive_whitespace_skip.snap
---
source: crates/math-core/src/token_queue.rs
expression: "{x   y} z"
---
1..2: Letter("x", MathOrText)
5..6: Letter("y", MathOrText)
