crates/math-core/src/snapshots/math_core__token_queue__tests__group_with_begin.snap
---
source: crates/math-core/src/token_queue.rs
expression: "{\\begin{matrix}}"
---
1: Begin(Matrix)
