crates/math-core/src/snapshots/math_core__token_queue__tests__hyphen_math_mode.snap
---
source: crates/math-core/src/token_queue.rs
expression: "-xy"
---
0..1: BinaryOp(Bin { char: '−', cat: BD, has_vs1: false })
