crates/math-core/src/snapshots/math_core__token_queue__tests__leading_whitespace.snap
---
source: crates/math-core/src/token_queue.rs
expression: "  {x   y} z"
---
3..4: Letter("x", MathOrText)
4..5: Whitespace
7..8: Letter("y", MathOrText)
