crates/math-core/src/snapshots/math_core__token_queue__tests__next_with_whitespace.snap
---
source: crates/math-core/src/token_queue.rs
expression: "\\text{  x +   y }"
---
0..5: Text(None)
5..6: GroupBegin
6..7: Whitespace
8..9: Letter("x", MathOrText)
9..10: Whitespace
10..11: MathOrTextMode(BinaryOp(Bin { char: '+', cat: BD, has_vs1: false }), '+')
11..12: Whitespace
14..15: Letter("y", MathOrText)
15..16: Whitespace
16..17: GroupEnd
