crates/math-core/src/snapshots/math_core__token_queue__tests__simple_group.snap
---
source: crates/math-core/src/token_queue.rs
expression: "{x+y}"
---
1..2: Letter("x", MathOrText)
2..3: MathOrTextMode(BinaryOp(Bin { char: '+', cat: BD, has_vs1: false }), '+')
3..4: Letter("y", MathOrText)
