crates/math-core/src/snapshots/math_core__token_queue__tests__too_many_closes.snap
---
source: crates/math-core/src/token_queue.rs
expression: "{x + y} + z}"
---
1..2: Letter("x", MathOrText)
2..3: Whitespace
3..4: MathOrTextMode(BinaryOp(Bin { char: '+', cat: BD, has_vs1: false }), "+")
4..5: Whitespace
5..6: Letter("y", MathOrText)
