crates/math-core/src/snapshots/math_core__token_queue__tests__unclosed_group.snap
---
source: crates/math-core/src/token_queue.rs
expression: "{x + y"
---
Error: Expected closing token "}", but reached end of input.
   ╭─[ <input>:1:7 ]
   │
 1 │ {x + y
   │       │ 
   │       ╰─ a group was never closed
───╯
